--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -9,7 +9,7 @@
 <br>
 <div class="row justify-content-center mb-3" >
   <div class="col-md-9 text-center">
-      <h2><strong>Phillip is the man in charge of SIAGON 😊</strong></h2>
+      <h2><strong>v1Ru$ is the man in charge of SIAGON 😊</strong></h2>
   </div>
 </div>
 
